Desktop & Mobile Fix -Add color to Navigation -Update logo size -Update button radius -Add <hr> tag -Update font size -Fixed header alignment

--- a/new layour/style.css
+++ b/new layour/style.css
@@ -17,24 +17,25 @@ body{
 header{
     width:100%;
     overflow:hidden;
+    background-color:var(--black);
 }
 p{
      font-family: 'Roboto Mono', monospace;
      color:var(--lightgrey);
 }
 .logo{
-    text-align:center;
-    font-size:30px;
-    color:var(--white);
-    text-transform:uppercase;
     display:flex;
     align-items:center;
     justify-content: center;
+    margin-top:5px;
     height:50px;
+    font-size:30px;
+    color:var(--white);
+    text-transform:uppercase;
 }
 .logo-img{
-    height:150px;
-    display:block;
+    width:80px;
+    display:inline-block;
 }
 nav ul{
     display:flex;
@@ -84,12 +85,19 @@ section{
 .headline button{
     background-color:var(--black);
     padding:5px;
-    border-radius:4px;
+    border-radius:5px;
     border:2px solid var(--black);
     color:var(--white);
     height:30px;
     width:100px;
 }
+hr {
+    width: 300px;
+    margin:0 auto;
+    opacity:0.5;
+    height:4px;
+    background-color:var(--white);
+  }
 h2{
     color:var(--white);
     padding:15px 0 0 15px;
@@ -144,6 +152,7 @@ footer{
     header{
         display:flex;
         justify-content: space-between;
+        align-items: center;
     }
     .logo{
         margin-left:40px;
@@ -151,10 +160,16 @@ footer{
     nav{
         margin-right:40px;
     }
+    section{
+        padding:30px;
+    }
    .headline{
     display: flex;
     justify-content:space-around;
     align-items: center;
+   }
+   .headline h1{
+    font-size:35px;
    }
    .headline p{
     margin:20px 0 20px 0;
@@ -175,7 +190,23 @@ footer{
     display:block;
     width:200px;
    }
+   hr{
+    width:400px;
+   }
    .product-container{
         display:flex;
+        justify-content:center;
+        height:auto;
+        margin-top:20px;
+   }
+   .product{
+   margin:10px;
+}
+   #quote{
+   padding:40px;
+   margin: 30px auto;
+   width: 800px;   
+   text-align:justify;
+   font-style:italic;
    }
 }
